Revert "Security - Refactor security and improve error handling, and enhance response formatting."
This reverts commit 2a938c271293674b579beed14bf1ddf6778f1360.